--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,7 +1,7 @@
 name: marina_hotel_mobile
 description: Marina Hotel Android app scaffold (RTL, Material 3)
 publish_to: 'none'
-version: 0.1.0+1
+version: 1.0.0+1
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -17,7 +17,7 @@ dependencies:
   dio: ^5.5.0
   drift: ^2.16.0
   drift_sqflite: ^2.0.1
-  sqlite3_flutter_libs: ^0.5.18
+  sqlite3_flutter_libs: 0.5.17
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   connectivity_plus: ^6.0.3
