--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.3.1
   intl: ^0.19.0
+  pdf: ^3.11.0
+  printing: ^5.12.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
