--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
     timeout-minutes: 30
     
     env:
-      FLUTTER_VERSION: '3.22.2'
+      FLUTTER_VERSION: '3.24.0'
       JAVA_VERSION: '17'
     
     steps:
@@ -131,7 +131,7 @@ jobs:
       - name: Build Release APK
         working-directory: mobile
         env:
-          BASE_API_URL: ${{ github.event.inputs.base_api_url || secrets.BASE_API_URL || 'https://api.marinaplaza.com/v1' }}
+          BASE_API_URL: ${{ github.event.inputs.base_api_url || secrets.BASE_API_URL || 'http://hotelmarina.com/MARINA_HOTEL_PORTABLE/api/v1' }}
         run: |
           echo "Building release APK..."
           echo "Using BASE_API_URL: $BASE_API_URL"
