--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -50,6 +50,18 @@ android {
         targetSdk = 35
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        multiDexEnabled = true
+        
+        // Optimize for hotel management app
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
+        }
+        
+        // Add app metadata
+        manifestPlaceholders = [
+            appName: "Marina Hotel",
+            appDescription: "Complete Hotel Management System"
+        ]
     }
 
     signingConfigs {
