🔧 Fix GitHub Actions Build Issues
✅ Fixed Issues:
- Removed emoji from pubspec.yaml description (YAML parsing error)
- Simplified GitHub Actions workflows to remove emoji characters
- Fixed working-directory paths for mobile Flutter project
- Streamlined build_apk.yml workflow for reliability
- Updated pr-check.yml to remove problematic characters

🚀 Improvements:
- Cleaner, more reliable CI/CD pipeline
- Proper Flutter project structure support
- Enhanced error handling and validation
- Simplified artifact naming and organization

Ready for successful APK builds! 📱

Co-authored-by: Capy <capy@capy.ai>

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,5 @@
 name: marina_hotel_mobile
-description: 🏨 Marina Hotel - Complete Hotel Management System (RTL, Offline-First, Arabic)
+description: "Marina Hotel - Complete Hotel Management System (RTL, Offline-First, Arabic)"
 publish_to: 'none'
 version: 1.1.0+2
 
