--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -52,10 +52,8 @@ android {
         versionName = flutterVersionName
         multiDexEnabled = true
         
-        // Optimize for hotel management app
-        ndk {
-            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
-        }
+        // ABI filters handled by Flutter --split-per-abi during build
+        // This allows flexible multi-architecture builds via GitHub Actions
         
         // Add app metadata
         manifestPlaceholders = [
