--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -1,233 +1,235 @@
-name: PR Quality Check
+name: ✅ Pull Request Check
 
 on:
   pull_request:
-    branches: [ main, master, capy/apk-ee3d67eb ]
-    paths: 
+    branches:
+      - main
+      - develop
+    paths:
       - 'mobile/**'
       - '.github/workflows/**'
 
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
+
+concurrency:
+  group: pr-check-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 env:
-  FLUTTER_VERSION: '3.22.0'
+  FLUTTER_VERSION: '3.24.0'
+  JAVA_VERSION: '17'
 
 jobs:
-  # فحص سريع للكود
-  quick-check:
-    name: Quick Analysis
+  analyze:
+    name: 🔍 تحليل الكود
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
-    - name: Checkout PR
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # للمقارنة مع الفرع الأساسي
-        
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ env.FLUTTER_VERSION }}
-        
-    - name: 📦 Get dependencies  
-      working-directory: ./mobile
-      run: flutter pub get
-      
-    - name: Analyze code
-      working-directory: ./mobile
-      run: |
-        echo "تحليل الكود..."
-        flutter analyze --fatal-infos > analysis_report.txt 2>&1 || true
-        
-        if [[ -s analysis_report.txt ]]; then
-          echo "⚠️ تم العثور على مشاكل في التحليل:"
-          cat analysis_report.txt
-          echo "analyze_status=warning" >> $GITHUB_OUTPUT
-        else
-          echo "✅ التحليل نظيف - لا توجد مشاكل!"
-          echo "analyze_status=success" >> $GITHUB_OUTPUT
-        fi
-      id: analyze
-      
-    - name: Count changes
-      run: |
-        echo "📈 إحصائيات التغييرات:"
-        
-        # عدد الملفات المتغيرة
-        CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} | wc -l)
-        echo "changed_files=${CHANGED_FILES}" >> $GITHUB_OUTPUT
-        echo "📁 ملفات متغيرة: ${CHANGED_FILES}"
-        
-        # عدد ملفات Dart المتغيرة
-        DART_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} | grep '\.dart$' | wc -l)
-        echo "dart_files=${DART_FILES}" >> $GITHUB_OUTPUT
-        echo "🎯 ملفات Dart: ${DART_FILES}"
-        
-        # سطور الكود المضافة/المحذوفة
-        ADDITIONS=$(git diff --numstat ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} | awk '{sum+=$1} END {print sum}')
-        DELETIONS=$(git diff --numstat ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} | awk '{sum+=$2} END {print sum}')
-        
-        echo "additions=${ADDITIONS:-0}" >> $GITHUB_OUTPUT
-        echo "deletions=${DELETIONS:-0}" >> $GITHUB_OUTPUT
-        echo "➕ سطور مضافة: ${ADDITIONS:-0}"
-        echo "➖ سطور محذوفة: ${DELETIONS:-0}"
-        
-      id: changes
-      
-    - name: 📝 Generate summary
-      run: |
-        echo "## تقرير فحص PR السريع" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
-        if [[ "${{ steps.analyze.outputs.analyze_status }}" == "success" ]]; then
-          echo "✅ **تحليل الكود**: نظيف" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "⚠️ **تحليل الكود**: يحتاج مراجعة" >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        echo "**إحصائيات التغييرات**:" >> $GITHUB_STEP_SUMMARY
-        echo "- ملفات متغيرة: ${{ steps.changes.outputs.changed_files }}" >> $GITHUB_STEP_SUMMARY
-        echo "- ملفات Dart: ${{ steps.changes.outputs.dart_files }}" >> $GITHUB_STEP_SUMMARY
-        echo "- سطور مضافة: ${{ steps.changes.outputs.additions }}" >> $GITHUB_STEP_SUMMARY
-        echo "- سطور محذوفة: ${{ steps.changes.outputs.deletions }}" >> $GITHUB_STEP_SUMMARY
+      - name: ✅ جلب الكود
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-  # بناء تجريبي للتأكد
-  build-test:
-    name: Build Test
-    runs-on: ubuntu-latest
-    needs: quick-check
-    
-    steps:
-    - name: Checkout PR
-      uses: actions/checkout@v4
-      
-    - name: ☕ Setup Java
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ env.FLUTTER_VERSION }}
-        
-    - name: 📦 Get dependencies
-      working-directory: ./mobile
-      run: |
-        flutter clean
-        flutter pub get
-        
-    - name: ⚙️ Code generation
-      working-directory: ./mobile
-      run: |
-        flutter packages pub run build_runner build --delete-conflicting-outputs
-        
-    - name: Test build
-      working-directory: ./mobile
-      run: |
-        echo "اختبار البناء..."
-        flutter build apk --debug --target-platform android-arm64 > build_log.txt 2>&1
-        
-        if [[ $? -eq 0 ]]; then
-          echo "✅ البناء نجح!"
-          echo "build_status=success" >> $GITHUB_OUTPUT
-        else
-          echo "❌ البناء فشل!"
-          echo "build_status=failed" >> $GITHUB_OUTPUT
-          echo "سجل الأخطاء:"
-          cat build_log.txt
-        fi
-      id: build
-      
-    - name: APK info
-      if: steps.build.outputs.build_status == 'success'
-      working-directory: ./mobile
-      run: |
-        if [[ -f "build/app/outputs/flutter-apk/app-debug.apk" ]]; then
-          APK_SIZE=$(du -h build/app/outputs/flutter-apk/app-debug.apk | cut -f1)
-          echo "📦 حجم APK التجريبي: ${APK_SIZE}"
-          echo "apk_size=${APK_SIZE}" >> $GITHUB_OUTPUT
-        fi
-      id: apk_info
+      - name: 🐦 تثبيت Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
 
-  # تعليق تلقائي على PR
-  pr-comment:
-    name: 💬 PR Comment
+      - name: 📦 كاش الاعتماديات
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            mobile/.dart_tool
+          key: ${{ runner.os }}-flutter-pr-${{ hashFiles('mobile/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-pr-
+            ${{ runner.os }}-flutter-
+
+      - name: 📥 تحميل الاعتماديات
+        working-directory: mobile
+        run: flutter pub get
+
+      - name: 🔍 تحليل الكود
+        working-directory: mobile
+        run: |
+          echo "🔍 تشغيل Flutter analyze..."
+          flutter analyze > analyze_output.txt 2>&1 || true
+          cat analyze_output.txt
+          
+          # فحص عدد المشاكل
+          ISSUES=$(grep -c "issue found" analyze_output.txt || echo "0")
+          echo "ANALYZE_ISSUES=$ISSUES" >> $GITHUB_ENV
+          
+          if [ "$ISSUES" -gt "0" ]; then
+            echo "⚠️ تم العثور على $ISSUES مشكلة في الكود"
+            exit 1
+          else
+            echo "✅ لا توجد مشاكل في الكود"
+          fi
+
+      - name: 🎨 فحص التنسيق
+        working-directory: mobile
+        continue-on-error: true
+        run: |
+          echo "🎨 فحص تنسيق الكود..."
+          dart format --output=none --set-exit-if-changed . || echo "⚠️ بعض الملفات تحتاج تنسيق"
+
+  test:
+    name: 🧪 تشغيل الاختبارات
     runs-on: ubuntu-latest
-    needs: [quick-check, build-test]
-    if: always() # سيعمل حتى لو فشلت المهام السابقة
+    timeout-minutes: 15
     
     steps:
-    - name: 💬 Comment on PR
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const quickCheck = '${{ needs.quick-check.result }}';
-          const buildTest = '${{ needs.build-test.result }}';
-          const analyzeStatus = '${{ needs.quick-check.outputs.analyze_status }}' || 'unknown';
-          const buildStatus = '${{ needs.build-test.outputs.build_status }}' || 'unknown';
+      - name: ✅ جلب الكود
+        uses: actions/checkout@v4
+
+      - name: 🐦 تثبيت Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: 📦 كاش الاعتماديات
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            mobile/.dart_tool
+          key: ${{ runner.os }}-flutter-test-${{ hashFiles('mobile/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-test-
+            ${{ runner.os }}-flutter-
+
+      - name: 📥 تحميل الاعتماديات
+        working-directory: mobile
+        run: flutter pub get
+
+      - name: 🔨 توليد الكود
+        working-directory: mobile
+        run: |
+          flutter pub run build_runner build --delete-conflicting-outputs || echo "⚠️ لا توجد ملفات للتوليد"
+
+      - name: 🧪 تشغيل الاختبارات
+        working-directory: mobile
+        continue-on-error: true
+        run: |
+          echo "🧪 تشغيل الاختبارات..."
+          flutter test --coverage || echo "⚠️ فشلت بعض الاختبارات أو لا توجد اختبارات"
+
+  build-check:
+    name: 🏗️ فحص البناء
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    
+    steps:
+      - name: ✅ جلب الكود
+        uses: actions/checkout@v4
+
+      - name: ☕ تثبيت Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: 'gradle'
+
+      - name: 🐦 تثبيت Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: 'stable'
+          cache: true
+
+      - name: 📦 كاش الاعتماديات
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            mobile/.dart_tool
+            mobile/build
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            mobile/android/.gradle
+          key: ${{ runner.os }}-flutter-build-${{ hashFiles('mobile/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-build-
+            ${{ runner.os }}-flutter-
+
+      - name: 📥 تحميل الاعتماديات
+        working-directory: mobile
+        run: flutter pub get
+
+      - name: 🔨 توليد الكود
+        working-directory: mobile
+        run: |
+          flutter pub run build_runner build --delete-conflicting-outputs || echo "⚠️ لا توجد ملفات للتوليد"
+
+      - name: 🏗️ محاولة البناء
+        working-directory: mobile
+        run: |
+          echo "🏗️ فحص إمكانية البناء..."
+          flutter build apk --debug --target-platform android-arm64
           
-          let statusIcon = '⚠️';
-          let statusText = 'يحتاج مراجعة';
-          
-          if (quickCheck === 'success' && buildTest === 'success') {
-            statusIcon = '✅';
-            statusText = 'جاهز للدمج';
-          } else if (quickCheck === 'failure' || buildTest === 'failure') {
-            statusIcon = '❌';  
-            statusText = 'يحتاج إصلاح';
-          }
-          
-          const comment = `## ${statusIcon} تقرير فحص PR - ${statusText}
-          
-          ### تحليل الكود:
-          ${analyzeStatus === 'success' ? '✅ نظيف - لا توجد مشاكل' : '⚠️ يحتاج مراجعة'}
-          
-          ### اختبار البناء:
-          ${buildStatus === 'success' ? '✅ نجح البناء' : buildStatus === 'failed' ? '❌ فشل البناء' : '⏳ قيد المعالجة'}
-          
-          ### إحصائيات التغييرات:
-          - **ملفات متغيرة**: ${{ needs.quick-check.outputs.changed_files || 'غير محدد' }}
-          - **ملفات Dart**: ${{ needs.quick-check.outputs.dart_files || '0' }}  
-          - **سطور مضافة**: ${{ needs.quick-check.outputs.additions || '0' }}
-          - **سطور محذوفة**: ${{ needs.quick-check.outputs.deletions || '0' }}
-          
-          ${buildStatus === 'success' && '${{ needs.build-test.outputs.apk_size }}' ? 
-            `### 📦 معلومات APK:\n- **الحجم**: ${{ needs.build-test.outputs.apk_size }}\n` : ''}
-          
-          ### 📋 الخطوات التالية:
-          ${statusIcon === '✅' ? 
-            '🎉 الكود جاهز للدمج! يمكن الموافقة على PR.' :
-            statusIcon === '❌' ?
-            '🔧 يرجى إصلاح المشاكل أعلاه قبل الدمج.' :
-            '👀 يرجى مراجعة التحذيرات والتأكد من الكود.'}
-          
-          ---
-          🤖 تم الفحص تلقائياً بواسطة GitHub Actions
-          📅 ${new Date().toLocaleString('ar-EG', {timeZone: 'UTC'})} UTC`;
-          
-          // البحث عن تعليق سابق وتحديثه
-          const comments = await github.rest.issues.listComments({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number
-          });
-          
-          const botComment = comments.data.find(comment => 
-            comment.user.type === 'Bot' && comment.body.includes('تقرير فحص PR')
-          );
-          
-          if (botComment) {
-            await github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: botComment.id,
-              body: comment
-            });
-          } else {
+          if [ -f "build/app/outputs/flutter-apk/app-debug.apk" ]; then
+            echo "✅ البناء نجح"
+            ls -lh build/app/outputs/flutter-apk/app-debug.apk
+          else
+            echo "❌ فشل البناء"
+            exit 1
+          fi
+
+  pr-summary:
+    name: 📝 ملخص PR
+    runs-on: ubuntu-latest
+    needs: [analyze, test, build-check]
+    if: always()
+    
+    steps:
+      - name: 📝 إنشاء ملخص
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const analyze = '${{ needs.analyze.result }}';
+            const test = '${{ needs.test.result }}';
+            const build = '${{ needs.build-check.result }}';
+            
+            let summary = '## 📊 ملخص فحص Pull Request\n\n';
+            summary += '| الفحص | النتيجة |\n';
+            summary += '|-------|--------|\n';
+            
+            const getEmoji = (result) => {
+              if (result === 'success') return '✅';
+              if (result === 'failure') return '❌';
+              if (result === 'skipped') return '⏭️';
+              return '⚠️';
+            };
+            
+            summary += `| 🔍 تحليل الكود | ${getEmoji(analyze)} ${analyze} |\n`;
+            summary += `| 🧪 الاختبارات | ${getEmoji(test)} ${test} |\n`;
+            summary += `| 🏗️ البناء | ${getEmoji(build)} ${build} |\n\n`;
+            
+            const allSuccess = analyze === 'success' && 
+                               (test === 'success' || test === 'skipped') && 
+                               build === 'success';
+            
+            if (allSuccess) {
+              summary += '### ✅ جميع الفحوصات نجحت!\n\n';
+              summary += 'يمكن دمج هذا PR بأمان.\n';
+            } else {
+              summary += '### ⚠️ بعض الفحوصات فشلت\n\n';
+              summary += 'يرجى مراجعة الأخطاء وإصلاحها قبل الدمج.\n';
+            }
+            
             await github.rest.issues.createComment({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: comment
+              body: summary
             });
-          }
