fix: إصلاح تكرار push trigger في workflow

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'mobile/**'
       - '.github/workflows/android-release.yml'
+  push:
     tags:
       - 'v*'
   workflow_dispatch:
