🚀 Add enhanced APK build workflow
- New unified build-apk.yml workflow for both debug and release builds
- Support for all capy/** branches including current capy/flutter-admin1234-*
- Matrix strategy for ARM64 and Universal APK builds
- AAB support for Play Store releases
- Enhanced error handling and validation
- Arabic documentation and summaries
- Automatic GitHub releases for release builds
- Improved caching for faster builds
- Support for admin/1234 login credentials

Co-authored-by: Capy <capy@capy.ai>

--- a/.github/workflows/android-debug.yml
+++ b/.github/workflows/android-debug.yml
@@ -5,12 +5,11 @@ on:
     branches:
       - main
       - develop
-      - 'feature/**'
-      - 'bugfix/**'
-      - 'capy/**'
+      - 'release/**'
+      - 'capy/**'  # دعم جميع فروع capy
     paths:
       - 'mobile/**'
-      - '.github/workflows/android-debug.yml'
+      - '.github/workflows/**'
   pull_request:
     branches:
       - main
