--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "com.android.application"
-    id "org.jetbrains.kotlin.android"
+    id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -32,34 +32,20 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace = "com.marinahotel.mobile"
-    compileSdk = 35
-    ndkVersion = "25.1.8937393"
+    compileSdk = 34
+    ndkVersion = flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
 
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
     defaultConfig {
         applicationId = "com.marinahotel.mobile"
-        minSdk = 21
-        targetSdk = 35
+        minSdk = flutter.minSdkVersion
+        targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
-        multiDexEnabled = true
-        
-        // ABI filters handled by Flutter --split-per-abi during build
-        // This allows flexible multi-architecture builds via GitHub Actions
-        
-        // Add app metadata
-        manifestPlaceholders = [
-            appName: "Marina Hotel",
-            appDescription: "Complete Hotel Management System"
-        ]
     }
 
     signingConfigs {
@@ -76,19 +62,10 @@ android {
     buildTypes {
         release {
             signingConfig = keystoreProperties['keyAlias'] != null ? signingConfigs.release : signingConfigs.debug
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    packagingOptions {
-        resources {
-            excludes += ['META-INF/LICENSE*', 'META-INF/AL2.0', 'META-INF/LGPL2.1']
         }
     }
 }
 
 flutter {
     source = "../.."
-}
+} 
