Configure GH_TOKEN for cleanup workflows

--- a/.github/workflows/cleanup-failed-runs.yml
+++ b/.github/workflows/cleanup-failed-runs.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: Delete failed workflow runs and artifacts
         env:
+          GH_TOKEN: ${{ github.token }}
           REPO: ${{ github.repository }}
         run: |
           echo "Fetching all completed workflow runs..."
