--- a/.github/workflows/clean-old-artifacts.yml
+++ b/.github/workflows/clean-old-artifacts.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: Delete old artifacts
         env:
+          GH_TOKEN: ${{ github.token }}
           REPO: ${{ github.repository }}
         run: |
           echo "Fetching all completed workflow runs..."
