Grant actions write permission for cleanup workflows

--- a/.github/workflows/cleanup-failed-runs.yml
+++ b/.github/workflows/cleanup-failed-runs.yml
@@ -3,6 +3,9 @@ name: Cleanup Failed Runs
 on:
   workflow_dispatch:
 
+permissions:
+  actions: write
+
 jobs:
   cleanup_failed:
     runs-on: ubuntu-latest
