--- a/.github/workflows/clean-old-artifacts.yml
+++ b/.github/workflows/clean-old-artifacts.yml
@@ -3,6 +3,9 @@ name: Clean Old Artifacts
 on:
   workflow_dispatch:
 
+permissions:
+  actions: write
+
 jobs:
   cleanup:
     runs-on: ubuntu-latest
