Gracefully handle artifact quota in Android CI

--- a/.github/workflows/Build_kotlin-marina.yml
+++ b/.github/workflows/Build_kotlin-marina.yml
@@ -48,8 +48,10 @@ jobs:
         working-directory: kotlin-marina
 
       - name: Upload debug APK artifact
+        continue-on-error: true
         uses: actions/upload-artifact@v4
         with:
           name: kotlin-marina-debug-apk
           path: kotlin-marina/app/build/outputs/apk/debug/*.apk
-          if-no-files-found: error
+          if-no-files-found: warn
+          retention-days: 1
