--- a/.github/workflows/build_kolin-marina.yml
+++ b/.github/workflows/build_kolin-marina.yml
@@ -49,16 +49,20 @@ jobs:
 
       - name: Upload APK
         if: always()
+        continue-on-error: true
         uses: actions/upload-artifact@v4
         with:
           name: kotlin-marina-app-debug-apk
           path: kotlin-marina/app/build/outputs/apk/debug/*.apk
+          retention-days: 1
 
       - name: Upload Lint Reports
         if: always()
+        continue-on-error: true
         uses: actions/upload-artifact@v4
         with:
           name: kotlin-marina-lint-reports
           path: |
             kotlin-marina/app/build/reports/**
             kotlin-marina/app/build/outputs/lint-results*.*
+          retention-days: 1
